# elden-ring-shared-damage

./: .gitignore  CMakeLists.txt  README.md  project.json  shared-damage.me3
include/: damage.h  hooks.h  param_patch.h
natives/SeamlessCoop/: ersc_settings.ini
natives/SeamlessCoop/locale/: english.json
src/: damage.cpp  dllmain.cpp  hooks.cpp  param_patch.cpp
